--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!------------------ bbostrap css ----------------->
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css" />
   <!------------------ css ----------------------->
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <!------------------google font link ---------->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
